--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
 		"greenpeace/planet4-master-theme" : "v1.86",
 		"greenpeace/planet4-nginx-helper" : "2.2.*",
 		"greenpeace/planet4-plugin-gutenberg-blocks": "v0.21",
-		"greenpeace/planet4-plugin-gutenberg-engagingnetworks": "v0.16",
+		"greenpeace/planet4-plugin-gutenberg-engagingnetworks": "dev-master",
 		"greenpeace/planet4-plugin-medialibrary" : "1.11",
 		"wikimedia/composer-merge-plugin": "1.4.1",
 		"wpackagist-plugin/akismet": "4.*",
